# gack

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml
scripts/: stream_video_to_rtsp.py
src/gack/: __init__.py  __main__.py  database.py  face_recog.py  pose_stream.py  web_interface.py  web_server.py
tests/: test_basic.py  test_database.py  test_face_recog.py  test_full_pipeline.py  test_web_interface.py
